@@ -7,11 +7,13 @@
  * Use of this software is governed by the Business Source License included
  * in the LICENSE.TXT file.
  *
- * Change Date: 2028-08-13
+ * Change Date: 2029-07-20
  ******************************************************************************/
+
 
 package org.pentaho.test.platform.plugin.pluginmgr;
 
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.pentaho.platform.api.engine.IComponent;
@@ -39,6 +41,7 @@ import org.pentaho.platform.engine.core.solution.PluginOperation;
 import org.pentaho.platform.engine.core.system.PentahoSystem;
 import org.pentaho.platform.engine.core.system.StandaloneSession;
 import org.pentaho.platform.engine.core.system.boot.PlatformInitializationException;
+import org.pentaho.platform.engine.core.system.objfac.spring.Const;
 import org.pentaho.platform.engine.services.solution.SolutionEngine;
 import org.pentaho.platform.plugin.services.pluginmgr.DefaultPluginManager;
 import org.pentaho.platform.plugin.services.pluginmgr.PlatformPlugin;
@@ -53,6 +56,7 @@ import org.pentaho.test.platform.engine.core.MicroPlatform;
 import org.pentaho.test.platform.utils.TestResourceLocation;
 import org.pentaho.ui.xul.XulOverlay;
 import org.springframework.beans.BeansException;
+import org.springframework.beans.factory.ListableBeanFactory;
 import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.support.BeanDefinitionBuilder;
 import org.springframework.beans.factory.support.DefaultListableBeanFactory;
@@ -63,12 +67,12 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
-import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.fail;
-import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 @SuppressWarnings( "nls" )
 public class DefaultPluginManagerIT {
@@ -97,8 +101,13 @@ public class DefaultPluginManagerIT {
     pluginManager = new DefaultPluginManager();
   }
 
+  @After
+  public void tearDown() {
+    PentahoSystem.shutdown();
+  }
+
   @Test
-  public void INTEGRATION_test1_Reload() throws PluginBeanException, PlatformInitializationException {
+  public void INTEGRATION_test1_Reload() throws PlatformInitializationException {
     microPlatform.start();
 
     pluginManager.reload();
@@ -160,20 +169,20 @@ public class DefaultPluginManagerIT {
     XulOverlay overlay = overlays.get( 0 );
     assertEquals( "Wrong overlay id", "overlay1", overlay.getId() ); //$NON-NLS-1$ //$NON-NLS-2$
     assertEquals( "Wrong overlay resource uri", "uri1", overlay.getResourceBundleUri() ); //$NON-NLS-1$ //$NON-NLS-2$
-    assertTrue( "Wrong overlay content", overlay.getSource().indexOf( "<node1" ) != -1 ); //$NON-NLS-1$ //$NON-NLS-2$
-    assertTrue( "Wrong overlay content", overlay.getSource().indexOf( "<node2" ) != -1 ); //$NON-NLS-1$ //$NON-NLS-2$
-    assertTrue( "Wrong overlay content", overlay.getSource().indexOf( "<node3" ) == -1 ); //$NON-NLS-1$ //$NON-NLS-2$
-    assertTrue( "Wrong overlay content", overlay.getSource().indexOf( "<node4" ) == -1 ); //$NON-NLS-1$ //$NON-NLS-2$
+    assertTrue( "Wrong overlay content", overlay.getSource().contains( "<node1" ) ); //$NON-NLS-1$ //$NON-NLS-2$
+    assertTrue( "Wrong overlay content", overlay.getSource().contains( "<node2" ) ); //$NON-NLS-1$ //$NON-NLS-2$
+    assertEquals( "Wrong overlay content", -1, overlay.getSource().indexOf( "<node3" ) ); //$NON-NLS-1$ //$NON-NLS-2$
+    assertEquals( "Wrong overlay content", -1, overlay.getSource().indexOf( "<node4" ) ); //$NON-NLS-1$ //$NON-NLS-2$
     assertNull( "Overlay URI should be null", overlay.getOverlayUri() ); //$NON-NLS-1$
 
     overlay = overlays.get( 1 );
 
     assertEquals( "Wrong overlay id", "overlay2", overlay.getId() ); //$NON-NLS-1$ //$NON-NLS-2$
     assertEquals( "Wrong overlay resource uri", "uri2", overlay.getResourceBundleUri() ); //$NON-NLS-1$ //$NON-NLS-2$
-    assertTrue( "Wrong overlay content", overlay.getSource().indexOf( "<node1" ) == -1 ); //$NON-NLS-1$ //$NON-NLS-2$
-    assertTrue( "Wrong overlay content", overlay.getSource().indexOf( "<node2" ) == -1 ); //$NON-NLS-1$ //$NON-NLS-2$
-    assertTrue( "Wrong overlay content", overlay.getSource().indexOf( "<node3" ) != -1 ); //$NON-NLS-1$ //$NON-NLS-2$
-    assertTrue( "Wrong overlay content", overlay.getSource().indexOf( "<node4" ) != -1 ); //$NON-NLS-1$ //$NON-NLS-2$
+    assertEquals( "Wrong overlay content", -1, overlay.getSource().indexOf( "<node1" ) ); //$NON-NLS-1$ //$NON-NLS-2$
+    assertEquals( "Wrong overlay content", -1, overlay.getSource().indexOf( "<node2" ) ); //$NON-NLS-1$ //$NON-NLS-2$
+    assertTrue( "Wrong overlay content", overlay.getSource().contains( "<node3" ) ); //$NON-NLS-1$ //$NON-NLS-2$
+    assertTrue( "Wrong overlay content", overlay.getSource().contains( "<node4" ) ); //$NON-NLS-1$ //$NON-NLS-2$
     assertNull( "Overlay URI should be null", overlay.getOverlayUri() ); //$NON-NLS-1$
   }
 
@@ -196,7 +205,7 @@ public class DefaultPluginManagerIT {
   }
 
   @Test
-  public void testGetClassloader() throws PluginBeanException, PlatformInitializationException {
+  public void testGetClassloader() throws PlatformInitializationException {
     microPlatform.define( IPluginProvider.class, Tst5PluginProvider.class ).start();
 
     // reload should register the beans
@@ -219,7 +228,7 @@ public class DefaultPluginManagerIT {
   }
 
   @Test()
-  public void test5c_getBeanBadClassname() throws PluginBeanException, PlatformInitializationException {
+  public void test5c_getBeanBadClassname() throws PlatformInitializationException {
     microPlatform.define( IPluginProvider.class, Tst5DefaultPluginProviderBadClass.class ).start();
 
     // reload should register the beans
@@ -464,7 +473,7 @@ public class DefaultPluginManagerIT {
     // register the gwt service handler
     IServiceTypeManager gwtHandler = new GwtRpcServiceManager();
     DefaultServiceManager sm = (DefaultServiceManager) PentahoSystem.get( IServiceManager.class );
-    sm.setServiceTypeManagers( Arrays.asList( gwtHandler ) );
+    sm.setServiceTypeManagers( List.of( gwtHandler ) );
 
     PluginMessageLogger.clear();
 
@@ -506,29 +515,27 @@ public class DefaultPluginManagerIT {
   }
 
   @Test
-  public void test17_getPluginIdForType() throws PlatformInitializationException, PluginBeanException {
-    IPluginProvider provider = new IPluginProvider() {
-      public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
-        PlatformPlugin p = new PlatformPlugin( new DefaultListableBeanFactory() );
-        p.setId( "testPlugin" );
+  public void test17_getPluginIdForType() throws PlatformInitializationException {
+    IPluginProvider provider = session -> {
+      PlatformPlugin p = new PlatformPlugin( new DefaultListableBeanFactory() );
+      p.setId( "testPlugin" );
 
-        ContentGeneratorInfo cg1 = new ContentGeneratorInfo();
-        cg1.setDescription( "test 9 plugin description" );
-        cg1.setId( "oldworldCGid" );
-        cg1.setType( "oldworldCGtype" );
-        cg1.setTitle( "test" );
-        cg1.setClassname( "org.pentaho.test.platform.plugin.pluginmgr.ContentGenerator1" );
-        // cg1.setFileInfoGeneratorClassname("org.pentaho.test.platform.plugin.pluginmgr.FileInfoGenerator");
-        p.addContentGenerator( cg1 );
+      ContentGeneratorInfo cg1 = new ContentGeneratorInfo();
+      cg1.setDescription( "test 9 plugin description" );
+      cg1.setId( "oldworldCGid" );
+      cg1.setType( "oldworldCGtype" );
+      cg1.setTitle( "test" );
+      cg1.setClassname( "org.pentaho.test.platform.plugin.pluginmgr.ContentGenerator1" );
+      // cg1.setFileInfoGeneratorClassname("org.pentaho.test.platform.plugin.pluginmgr.FileInfoGenerator");
+      p.addContentGenerator( cg1 );
 
-        BeanDefinition beanDef =
-          BeanDefinitionBuilder.rootBeanDefinition( "org.pentaho.test.platform.plugin.pluginmgr.ContentGenerator1" )
-            .setScope( BeanDefinition.SCOPE_PROTOTYPE ).getBeanDefinition();
-        p.getBeanFactory().registerBeanDefinition( "springDefinedCGid", beanDef );
-        p.getBeanFactory().registerAlias( "springDefinedCGid", "springDefinedCGtype" );
+      BeanDefinition beanDef =
+        BeanDefinitionBuilder.rootBeanDefinition( "org.pentaho.test.platform.plugin.pluginmgr.ContentGenerator1" )
+          .setScope( BeanDefinition.SCOPE_PROTOTYPE ).getBeanDefinition();
+      p.getBeanFactory().registerBeanDefinition( "springDefinedCGid", beanDef );
+      p.getBeanFactory().registerAlias( "springDefinedCGid", "springDefinedCGtype" );
 
-        return Arrays.asList( (IPlatformPlugin) p );
-      }
+      return List.of( (IPlatformPlugin) p );
     };
 
     microPlatform.defineInstance( IPluginProvider.class, provider ).start();
@@ -539,39 +546,26 @@ public class DefaultPluginManagerIT {
     assertEquals( "testPlugin", pluginManager.getPluginIdForType( "springDefinedCGtype" ) );
   }
 
+  @Test
+  public void test18_registersOwnerPluginIdBeanInPluginBeanFactory() throws PlatformInitializationException {
+
+    microPlatform.define( IPluginProvider.class, Tst18PluginProvider.class ).start();
+
+    // reload should register the beans
+    pluginManager.reload();
+
+    ListableBeanFactory pluginBeanFactory = pluginManager.getBeanFactory( "test18Plugin" );
+
+    String ownerPluginId = pluginBeanFactory.getBean( Const.OWNER_PLUGIN_ID_BEAN, String.class );
+
+    assertEquals( "test18Plugin", ownerPluginId );
+  }
+
   public String getSolutionPath() {
     return solutionPath;
   }
 
   public static class CheckingLifecycleListener implements IPluginLifecycleListener {
-    public static boolean initCalled, loadedCalled, unloadedCalled;
-
-    public static void clearFlags() {
-      initCalled = false;
-      loadedCalled = false;
-      unloadedCalled = false;
-    }
-
-    public void init() {
-      initCalled = true;
-      loadedCalled = false;
-    }
-
-    public void loaded() {
-      if ( !initCalled ) {
-        throw new IllegalStateException( "init() should have been called prior to loaded()" );
-      }
-      loadedCalled = true;
-    }
-
-    public void unLoaded() {
-      unloadedCalled = true;
-      loadedCalled = false;
-      initCalled = false;
-    }
-  }
-
-  public static class AnotherCheckingLifecycleListener implements IPluginLifecycleListener {
     public static boolean initCalled, loadedCalled, unloadedCalled;
 
     public static void clearFlags() {
@@ -614,25 +608,25 @@ public class DefaultPluginManagerIT {
   }
 
   public static class Tst3PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin();
       p.setId( "Plugin 3" );
       p.addLifecycleListenerClassname( "bogus.classname" );
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst2PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin();
       p.setId( "test2Plugin" );
       p.addLifecycleListenerClassname( CheckingLifecycleListener.class.getName() );
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst5PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin();
       // need to set source description - classloader needs it
       p.setId( "good-plugin1" );
@@ -640,12 +634,12 @@ public class DefaultPluginManagerIT {
       p.addBean( new PluginBeanDefinition( "TestMockComponent",
         "org.pentaho.test.platform.engine.core.MockComponent" ) );
       p.addBean( new PluginBeanDefinition( "TestPojo", "java.lang.String" ) );
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst5DefaultPluginProviderBadClass implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin();
       // need to set source description - classloader needs it
       p.setId( "good-plugin1" );
@@ -654,22 +648,22 @@ public class DefaultPluginManagerIT {
         "org.pentaho.test.platform.engine.core.MockComponent" ) );
       p.addBean( new PluginBeanDefinition( "TestPojo", "java.lang.String" ) );
       p.addBean( new PluginBeanDefinition( "TestDefaultClassNotFoundComponent", "org.pentaho.test.NotThere" ) );
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst6PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin();
       p.setId( "test6Plugin" );
       p.addBean( new PluginBeanDefinition( "bean1", "java.lang.String" ) );
       p.addBean( new PluginBeanDefinition( "bean1", "java.lang.Object" ) );
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst8PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin( new DefaultListableBeanFactory() );
       p.setId( "test8Plugin" );
       // need to set source description - classloader needs it
@@ -680,12 +674,12 @@ public class DefaultPluginManagerIT {
         BeanDefinitionBuilder.rootBeanDefinition( "org.pentaho.nowhere.PluginOnlyClass" ).setScope(
           BeanDefinition.SCOPE_PROTOTYPE ).getBeanDefinition();
       p.getBeanFactory().registerBeanDefinition( "PluginOnlyClassSpringFile", beanDef );
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst9PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin( new DefaultListableBeanFactory() );
       p.setId( "test9Plugin" );
 
@@ -705,12 +699,12 @@ public class DefaultPluginManagerIT {
       p.getBeanFactory().registerBeanDefinition( "test9bid", beanDef );
       p.getBeanFactory().registerAlias( "test9bid", "test9btype" );
 
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst10PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin();
       p.setId( "test10Plugin" );
 
@@ -747,37 +741,12 @@ public class DefaultPluginManagerIT {
       //
       // //////////////////
 
-      return Arrays.asList( (IPlatformPlugin) p );
-    }
-  }
-
-  public static class Tst11PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
-      PlatformPlugin p = new PlatformPlugin();
-      p.setId( "test11Plugin" );
-      PluginServiceDefinition pws = new PluginServiceDefinition();
-      pws.setTitle( "ws11title" );
-      pws.setDescription( "ws11description" );
-      pws.setServiceBeanId( "org.pentaho.test.platform.engine.core.EchoServiceBean" );
-      p.addWebservice( pws );
-
-      // defining bean with null id, the classname will be used as the id
-      p.addBean( new PluginBeanDefinition( null, "org.pentaho.test.platform.engine.core.EchoServiceBean" ) );
-
-      return Arrays.asList( (IPlatformPlugin) p );
-    }
-  }
-
-  public static class Tst12PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
-      PlatformPlugin p = new PlatformPlugin();
-      p.setId( "test12Plugin" );
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst13PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin();
 
       p.setId( "test13Plugin" );
@@ -798,12 +767,12 @@ public class DefaultPluginManagerIT {
       pExt.setId( "test13Plugin-ext" );
       pExt.addStaticResourcePath( "/test-ext/13/static/url", "/tmp" );
 
-      return Arrays.asList( (IPlatformPlugin) p, (IPlatformPlugin) pExt );
+      return List.of( p, pExt );
     }
   }
 
   public static class Tst14PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin();
       p.setId( "test14Plugin" );
       PluginServiceDefinition pws = new PluginServiceDefinition();
@@ -813,13 +782,13 @@ public class DefaultPluginManagerIT {
       pws.setServiceClass( "org.pentaho.test.platform.engine.core.EchoServiceBean" );
       p.addWebservice( pws );
 
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst15PluginProvider_DistinctNames implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
-      List<IPlatformPlugin> plugins = new ArrayList<IPlatformPlugin>();
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
+      List<IPlatformPlugin> plugins = new ArrayList<>();
 
       PlatformPlugin p = new PlatformPlugin();
       p.setId( "distinctTest15Plugin1" );
@@ -834,8 +803,8 @@ public class DefaultPluginManagerIT {
   }
 
   public static class Tst15PluginProvider_DupNames implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
-      List<IPlatformPlugin> plugins = new ArrayList<IPlatformPlugin>();
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
+      List<IPlatformPlugin> plugins = new ArrayList<>();
 
       PlatformPlugin p = new PlatformPlugin();
       p.setId( "dupTest15Plugin" );
@@ -850,7 +819,7 @@ public class DefaultPluginManagerIT {
   }
 
   public static class Tst16PluginProvider implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
       PlatformPlugin p = new PlatformPlugin( new DefaultListableBeanFactory() );
       BeanDefinition def =
         BeanDefinitionBuilder.rootBeanDefinition( "org.pentaho.nowhere.PluginOnlyClass" ).getBeanDefinition();
@@ -859,13 +828,13 @@ public class DefaultPluginManagerIT {
       // need to set source description - classloader needs it
       p.setSourceDescription( "good-plugin1" );
 
-      return Arrays.asList( (IPlatformPlugin) p );
+      return List.of( p );
     }
   }
 
   public static class Tst16Plugin implements IPluginProvider {
-    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
-      List<IPlatformPlugin> plugins = new ArrayList<IPlatformPlugin>();
+    public List<IPlatformPlugin> getPlugins( IPentahoSession session ) {
+      List<IPlatformPlugin> plugins = new ArrayList<>();
 
       PlatformPlugin p = new PlatformPlugin();
       p.setId( "externalPlugin" );
@@ -876,13 +845,13 @@ public class DefaultPluginManagerIT {
     }
   }
 
-  public static class Tst17PluginProvider implements IPluginProvider {
+  public static class Tst18PluginProvider implements IPluginProvider {
     public List<IPlatformPlugin> getPlugins( IPentahoSession session ) throws PlatformPluginRegistrationException {
       PlatformPlugin p = new PlatformPlugin();
-      p.setId( "test17Plugin" );
-      p.addLifecycleListenerClassname( CheckingLifecycleListener.class.getName() );
-      p.addLifecycleListenerClassname( AnotherCheckingLifecycleListener.class.getName() );
-      return Arrays.asList( (IPlatformPlugin) p );
+      // need to set source description - classloader needs it
+      p.setId( "test18Plugin" );
+      p.addBean( new PluginBeanDefinition( "TestMockComponent", "org.pentaho.test.platform.engine.core.MockComponent" ) );
+      return List.of( p );
     }
   }
 }
